Fixed some ids, aligned results to the left, and added loadout builder class.

--- a/css/theme.css
+++ b/css/theme.css
@@ -61,13 +61,20 @@ body {
     outline: none;
 }
 
-.search-result {
-    font-size: 2.5em;
-    text-align: center;
+.search-result-wrapper {
+    font-size: 2.45em;
+    text-align: left;
     margin: 1em;
     padding: 1.5rem;
     max-width: 100%;
     overflow: hidden;
+}
+
+.search-result {
+    max-width: 108em;
+    overflow: hidden;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .search-result-key {
